Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133586

F2 shortcut or Ctrl+Click in qml files sometimes leads to build dir instead of source and sometimes does absolutly nothing

XMLWordPrintable

    • c77ff3ffc (dev), 9d49789d8 (6.10), e44ae1b92 (6.9), 26a67d464 (tqtc/lts-6.8)

      This bug (https://bugreports.qt.io/browse/QTBUG-131920) is still present in Qt 6.8.2 (QtCreator 15.0.1)

      Ctrl+Click on a Cpp element (with QML_ELEMENT macro) in same or other qml module works
      Ctrl+Click on a QML element in same or other qml module does not work

        1. Capture d’écran du 2025-02-10 09-53-56.png
          160 kB
          Romain Donzé
        2. Capture d’écran du 2025-02-10 09-57-13.png
          162 kB
          Romain Donzé
        3. Capture d’écran du 2025-02-10 10-58-21.png
          31 kB
          Romain Donzé
        4. Capture d’écran du 2025-03-14 13-19-35.png
          72 kB
          Romain Donzé
        5. MyReproducer.zip
          15 kB
          Romain Donzé
        6. video.webm
          1.03 MB
          Romain Donzé
        7. screenshot-1.png
          143 kB
          Sami Shalayel
        8. Capture d’écran du 2025-03-20 11-11-27.png
          156 kB
          Romain Donzé
        For Gerrit Dashboard: QTBUG-133586
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            romain.donze Romain Donzé
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes