src/qmlls/qqmlcodemodel_p.h
@@ -92,8 +92,6 @@ public:
     OpenDocument openDocumentByUrl(const QByteArray &url);
 
     void openNeedUpdate();
-    void indexNeedsUpdate();
-    void addDirectoriesToIndex(const QStringList &paths, QLanguageServer *server);
     void addOpenToUpdate(const QByteArray &);
     void removeDirectory(const QString &path);
     // void updateDocument(const OpenDocument &doc);
@@ -129,13 +127,6 @@ Q_SIGNALS:
     void documentationRootPathChanged(const QString &path);
 
 private:
-    void indexDirectory(const QString &path, int depthLeft);
-    int indexEvalProgress() const; // to be called in the mutex
-    void indexStart(); // to be called in the mutex
-    void indexEnd(); // to be called in the mutex
-    void indexSendProgress(int progress);
-    bool indexCancelled();
-    bool indexSome();
     void addDirectory(const QString &path, int leftDepth);
     bool openUpdateSome();
     void openUpdateStart();
@@ -149,11 +140,6 @@ private:
 
     mutable QMutex m_mutex;
     State m_state = State::Running;
-    int m_lastIndexProgress = 0;
-    int m_nIndexInProgress = 0;
-    QList<ToIndex> m_toIndex;
-    int m_indexInProgressCost = 0;
-    int m_indexDoneCost = 0;
     int m_nUpdateInProgress = 0;
     QStringList m_importPaths;
     QQmlJS::Dom::DomItem m_currentEnv;
